2007-08-28	Joel Sherrill <joel.sherrill@OARcorp.com>

	* rtems/include/rtems/rtems/clock.h, score/src/threadhandler.c: Fix
	spacing and spelling.

2007-08-28	Joel Sherrill <joel.sherrill@OARcorp.com>

	PR 1256/networking
	* ftpd/ftpd.c: Fix unaligned access.

2007-08-28	Joel Sherrill <joel.sherrill@OARcorp.com>

	* posix/Makefile.am: Always build nanosleep.

2007-08-17	Chris Johns <chrisj@rtems.org>

	* libmisc/capture/README: Minor copyright change.
	* libmisc/capture/capture-cli.c, libmisc/capture/capture.c,
	libmisc/capture/capture.h: Fixed the memory leak when lots of
	tasks are being created and deleted. Improved the trigger
	interface so all task type actions can be caught.

2007-08-13	Chris Johns <chrisj@rtems.org>

	* score/include/rtems/score/object.h: Point the
	OBJECTS_RTEMS_CLASSES_LAST macro to the last entry.

2007-07-31	Joel Sherrill <joel.sherrill@OARcorp.com>

	PR 1248/networking
	* libnetworking/rtems/rtems_glue.c: Luke Stras <luke@spacequest.com>
	reported that when no interfaces are successfully attached, the
	default route is broken and may result in a jump to an illegal
	address.

2007-07-31	Ralf Corsépius <ralf.corsepius@rtems.org>

	* score/inline/rtems/score/priority.inl: Use size_t instead of
	  uint32_t for array index.

2007-07-30	Ralf Corsépius <ralf.corsepius@rtems.org>

	* libnetworking/netinet/in_cksum_m68k.h: Use __mcoldfire__ to
	  identify coldfire cpus.

2007-07-30	Ralf Corsépius <ralf.corsepius@rtems.org>

	* shttpd/log.c: Activate SPLIT_SNPRINTF for gcc <= 4.2.1 and
	  coldfire.

2007-07-30	Ralf Corsépius <ralf.corsepius@rtems.org>

	* shttpd/log.c: Add preliminary version of SPLIT_SNPRINTF to
	  work-around bug m68k/coldfire -fomit-frame-pointer bug
	  http://gcc.gnu.org/bugzilla/show_bug.cgi?id=32307.

2007-07-27	Chris Johns <chrisj@rtems.org>

	* wrapup/Makefile.am: Create archive from a file for hosts
	with a limited command line size.

2007-07-26	Ralf Corsépius <ralf.corsepius@rtems.org>
