@@ -1,3 +1,8 @@
+2007-09-04	Joel Sherrill <joel.sherrill@oarcorp.com>
+
+	* libmisc/untar/untar.c, libmisc/untar/untar.h: Add const to char *.
+	Use printk.
+
 2007-08-28	Joel Sherrill <joel.sherrill@OARcorp.com>
 
 	* rtems/include/rtems/rtems/clock.h, score/src/threadhandler.c: Fix
